fix: study destinations image fix

--- a/AUSTRALIA.html
+++ b/AUSTRALIA.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>USA</title>
+    <title>AUSTRALIA</title>
     <meta name="viewport" content="width= device-width, initial-scale=1.0">
     <link rel="stylesheet" href="AUSTRALIA.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -160,7 +160,7 @@
             <p>Select a nation renowned for its illustrious history of nurturing more than 2.5 million global graduates, consistently setting the gold standard in global education. Embark on a journey to attain top-tier, globally acclaimed qualifications from world-class institutions. Enhance your career prospects by gaining invaluable industry exposure through internships and placements, establishing connections with international employers, and excelling in the global job market. Immerse yourself in the warmth and inspiration of some of the world's most welcoming and vibrant cities, brimming with a rich tapestry of diverse nationalities and cultures from across the globe. This nation serves as your gateway to a world-class education and a promising global career, where opportunities are abundant, and your horizons are destined to expand.
 
             </p>
-            <img src="./USA.assets/Content.png" alt="2ndphoto" class="discuss" />
+            <img src="./assets/MAIN-AUSTRALIA.png" alt="2ndphoto" class="discuss" />
             <h2 class="titles2">Career and Industry Insights</h2>
             <p>Australia boasts a dynamic landscape of career opportunities spanning a wide array of industries. The nation's robust economy thrives in sectors such as Healthcare, Information Technology, Engineering, Tourism, and Education. The Healthcare sector, in particular, is flourishing, driven by an aging population and an increasing need for skilled healthcare professionals. Information Technology is experiencing rapid growth, with a strong emphasis on innovation and cybersecurity, offering a plethora of roles for tech enthusiasts. Engineering, especially in fields like renewable energy and infrastructure development, is in high demand, making a significant contribution to the job market. Australia's status as a global education hub further opens up employment opportunities in the education sector. Additionally, the country's breathtaking natural attractions sustain a thriving tourism industry. With a strong job market and a high quality of life, Australia remains an enticing destination for those in search of diverse and fulfilling career paths.
 
@@ -194,7 +194,7 @@
                 </ul>
 
             </div>
-            <img src="./USA.assets/someonewithlaptop.png" class="AU" alt="sub1" />
+            <img src="./assets/AUSTRALIA2.png" class="AU" alt="sub1" />
         </div>
         <section class="help-section">
             <div class="containerform">
