--- a/CANADA.html
+++ b/CANADA.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>USA</title>
+    <title>CANADA</title>
     <link rel="stylesheet" href="./USA.css" />
     <meta name="viewport" content="width= device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CANADA.css" />
@@ -156,7 +156,7 @@
             <h2 class="titles1">Why Study in CANADA?</h2>
             <p>Enroll in a nation that has experienced an impressive threefold rise in its international student population over the past decade. This growth can be attributed to its world-renowned universities offering exceptional education, highly practical programs that prioritize hands-on learning, and some of the most affordable tuition fees among English-speaking countries. Enjoy an exceptional quality of life in the highly livable cities of Vancouver and Toronto while also taking advantage of career advancement opportunities in one of the world's most resource-rich, industrialized, and stable economies. This nation provides a welcoming environment for students seeking a top-tier education and a bright future in a diverse and dynamic setting.
             </p>
-            <img src="./USA.assets/Content.png" alt="2ndphoto" class="discuss" />
+            <img src="./assets/MAIN-CANADA.png" alt="2ndphoto" class="discuss" />
             <h2 class="titles2">Career and Industry Insights</h2>
             <p>Canada offers a diverse landscape of career opportunities within a robust and thriving economy. Key sectors driving its prosperity include Agriculture, Energy, Technology, Manufacturing, and Services. International students and job seekers have a wide array of career options in Engineering, Construction, IT, Healthcare, Law, and Banking & Finance. Notably, Canada's job market consistently outpaces its population growth, ensuring abundant prospects for those seeking employment. The country's commitment to a high standard of living extends to all residents, making it an attractive destination for those in pursuit of both career advancement and an exceptional quality of life. In Canada, the potential for professional growth and personal well-being intersect, making it an appealing choice for individuals looking to build a promising future.
             </p>
@@ -188,7 +188,7 @@
                 </ul>
 
             </div>
-            <img src="./USA.assets/someonewithlaptop.png" class="AU" alt="sub1" />
+            <img src="./assets/CANADA2.png" class="AU" alt="sub1" />
         </div>
         <section class="help-section">
             <div class="containerform">
