--- a/GMAT.html
+++ b/GMAT.html
@@ -701,6 +701,7 @@ updateGMATTestimonial(currIndex);
       </script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons."></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/js"></script>
+  <script  src="main.js" defer></script>
 </body>
 
 </html>
