--- a/UK.html
+++ b/UK.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>USA</title>
+    <title>UK</title>
     <link rel="stylesheet" href="./UK.css" />
     <meta name="viewport" content="width= device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -168,7 +168,7 @@
                 future.
 
             </p>
-            <img src="./USA.assets/Content.png" alt="2ndphoto" class="discuss" />
+            <img src="./assets/MAIN-UK.png" alt="2ndphoto" class="discuss" />
             <h2 class="titles2">Career and Industry Insights</h2>
             <p>The United Kingdom offers a plethora of career opportunities across diverse industries. Renowned as a
                 global finance leader, London stands as a prominent financial hub, presenting lucrative prospects in
@@ -209,7 +209,7 @@
                 </ul>
 
             </div>
-            <img src="./USA.assets/someonewithlaptop.png" class="AU" alt="sub1" />
+            <img src="./assets/UK2.png" class="AU" alt="sub1" />
         </div>
         <section class="help-section">
             <div class="containerform">
