--- a/USA.html
+++ b/USA.html
@@ -163,7 +163,7 @@
                 is the flexibility of the education system, allowing you to apply to various programs aligned with
                 your academic and professional goals. Graduating from the USA equips you with a global perspective
                 and practical skills essential for the future.</p>
-            <img src="./USA.assets/Content.png" alt="2ndphoto" class="discuss" />
+            <img src="./USA.assets/Main-USA.png" alt="2ndphoto" class="discuss" />
             <h2 class="titles2">Career and Industry Insights</h2>
             <p>In the USA, a global economic powerhouse, diverse and promising career opportunities
                 abound across multiple industries. Technology and IT fields continue to flourish, with Silicon
@@ -200,7 +200,7 @@
                 </ul>
 
             </div>
-            <img src="./USA.assets/someonewithlaptop.png" class="AU" alt="sub1" />
+            <img src="./USA.assets/USA2.png" class="AU" alt="sub1" />
         </div>
         <section class="help-section">
             <div class="containerform">
