--- a/IELTS.html
+++ b/IELTS.html
@@ -719,6 +719,7 @@ updateIELTSTestimonial(currIndex);
   </script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons."></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/js"></script>
+  <script  src="main.js" defer></script>
 </body>
 
 </html>
