--- a/SAT.html
+++ b/SAT.html
@@ -598,6 +598,7 @@ updateSATTestimonial(currentIndex);
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons."></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/js"></script>
+    <script  src="main.js" defer></script>
 </body>
 
 </html>
