feat: adding background img

--- a/AUSTRALIA.html
+++ b/AUSTRALIA.html
@@ -151,7 +151,7 @@
     
     <main>
         <div class="container1">
-            <img src="./USA.assets/USA.svg" class="background" alt="secondphoto" />
+            <img src="./assets/AUS (1).svg" class="background" alt="secondphoto" />
             <h2 class="stusa">Study in Australia</h2>
         </div>
         <div class="container2">
