--- a/CANADA.html
+++ b/CANADA.html
@@ -149,7 +149,7 @@
   </div>
     <main>
         <div class="container1">
-            <img src="./USA.assets/USA.svg" class="background" alt="secondphoto" />
+            <img src="./assets/CANADA (1).svg" class="background" alt="secondphoto" />
             <h2 class="stusa">Study in Canada</h2>
         </div>
         <div class="container2">
