--- a/UK.html
+++ b/UK.html
@@ -150,7 +150,7 @@
   </div>
     <main>
         <div class="container1">
-            <img src="./USA.assets/USA.svg" class="background" alt="secondphoto" />
+            <img src="./assets/UK (2).svg" class="background" alt="secondphoto" />
             <h2 class="stusa">Study in UK</h2>
         </div>
         <div class="container2">
