fix: setting  background img

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                 <img src="assets/usa.svg" alt="USA">
               </a>
               <p class="places">USA</p>
+              <img src="assets/greenbg2.svg" class="card-svg usa-svg">
             </div>
           </div>
           <div class="col-md-4">
@@ -223,6 +224,7 @@
                 <img src="assets/uk.svg" alt="UK">
               </a>
               <p class="places">UK</p>
+              <img src="assets/SDpattern.svg" class="card-svg uk-svg">
             </div>
             <div class="card1">
               <a href="CANADA.html">
@@ -237,12 +239,14 @@
                 <img src="assets/aus.svg" alt="Australia">
               </a>
               <p class="places">AUSTRALIA</p>
+              <img src="assets/SDpattern.svg" class="card-svg aus-svg">
             </div>
             <div class="card1">
               <a href="USA.html">
                 <img src="assets/world.svg" alt="Rest of the World">
               </a>
               <p class="places">REST of the WORLD</p>
+              <img src="assets/Greenbg.svg" class="card-svg world-svg">
             </div>
           </div>
         </div>
