fix:study destination images height fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="Metropolis/Metropolis-Medium.otf.css">
 
-  <title>Vite App</title>
+  <title>Neem Tree</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
