--- a/about.html
+++ b/about.html
@@ -360,7 +360,7 @@
           <h2>Book Free Consultation</h2>
           <p>Build stronger Customer Relationship with <strong>Consultalk</strong></p>
         </div>
-        <div class="left-columns">  <button type="submit" class="btn btn-primary btn-block">Book now</button></div>
+        <div class="left-columns">  <button type="submit" class="btn btn-primary btn-block" onclick="openPopup()">Book now</button></div>
         
       </div>
     </section>
