fix: all pages  style fix

--- a/Ourservices.html
+++ b/Ourservices.html
@@ -209,8 +209,8 @@
     <section>
       <div class="container7">
         <h2 class="title num-center">
-          Don’t Trust Our Words,<br />
-          Trust The Numbers
+          Your future abroad, <br />
+          Our proven numbers.
         </h2>
         <div class="num-row justify-content-center">
 
@@ -281,7 +281,7 @@
               <p>2 Ardmore Pl, East Brunswick, NJ 08816 New Jersey</p>
               <img src="./ourservice.assets/phone.png" alt="icon2" class="icon2" />
               <h3 class="no1">+91 87120 33666</h3>
-              <a href="https://www.google.com/maps/place/2+Ardmore+Pl,+East+Brunswick,+NJ+08816,+USA/@40.3945878,-74.4319518,17z/data=!3m1!4b1!4m6!3m5!1s0x89c3c5389ee0c489:0xb3bc077536ebccd8!8m2!3d40.3945837!4d-74.4293769!16s%2Fg%2F11t770hdjy?entry=ttu" ><img src="./ourservice.assets/map.png" alt="map" class="map1" /></a>
+              <a href="https://www.google.com/maps/place/2+Ardmore+Pl,+East+Brunswick,+NJ+08816,+USA/@40.3945878,-74.4319518,17z/data=!3m1!4b1!4m6!3m5!1s0x89c3c5389ee0c489:0xb3bc077536ebccd8!8m2!3d40.3945837!4d-74.4293769!16s%2Fg%2F11t770hdjy?entry=ttu" ><img src="./ourservice.assets/map1.jpeg" alt="map" class="map1" /></a>
             </div>
           </div>
           <div class="card2">
@@ -291,7 +291,7 @@
               <p>Flat No: 201 Santhi Classic Apartments HUDA Trade Centre Lingampally Hyderabad Telangana 500019</p>
               <img src="./ourservice.assets/phone.png" alt="icon2" class="icon4" />
               <h3 class="no2">+91 90000 92929</h3>
-              <a href="https://www.google.com/maps/search/Flat+No:+201+Santhi+Classic+Apartments+HUDA+Trade+Centre+Lingampally+Hyderabad+Telangana+500019/@17.4839015,78.3113032,17z/data=!3m1!4b1?entry=ttu" ><img src="./ourservice.assets/map.png" alt="map" class="map2" /></a>
+              <a href="https://www.google.com/maps/search/Flat+No:+201+Santhi+Classic+Apartments+HUDA+Trade+Centre+Lingampally+Hyderabad+Telangana+500019/@17.4839015,78.3113032,17z/data=!3m1!4b1?entry=ttu" ><img src="./ourservice.assets/map2.jpeg" alt="map" class="map2" /></a>
             </div>
           </div>
           <div class="card3">
@@ -301,7 +301,7 @@
               <p>2-43-46/1 Bhaskar Nagar Endowment Colony 50 building center Kakinada</p>
               <img src="./ourservice.assets/phone.png" alt="icon2" class="icon6" />
               <h3 class="no3">+91 97017 13888</h3>
-              <a href="https://www.google.com/maps/search/2-43-46%2F1+Bhaskar+Nagar+Endowment+Colony+50+building+center+Kakinada/@16.9628936,82.2269384,15z/data=!3m1!4b1?entry=ttu"><img src="./ourservice.assets/map.png" alt="map" class="map3" /></a>
+              <a href="https://www.google.com/maps/search/2-43-46%2F1+Bhaskar+Nagar+Endowment+Colony+50+building+center+Kakinada/@16.9628936,82.2269384,15z/data=!3m1!4b1?entry=ttu"><img src="./ourservice.assets/map3.jpeg" alt="map" class="map3" /></a>
             </div>
           </div>
         </div>
@@ -313,7 +313,7 @@
         <div class="left-column">
          <div class="contact-heading"> <p class="banner-yel">REACH US</p>
           <h2 class="title">
-            Contact Us.It's Easy.
+            Contact Us.  It's Easy.
           </h2>
           <p class="contact-content">Interested in studying abroad? We're here to help! Share your details in the form,
             and our expert consultants will reach out to guide you through the process.</p>
