--- a/TOEFL.html
+++ b/TOEFL.html
@@ -176,7 +176,7 @@
           </div>
           <div class="col-md-4">
             <div class="test-card">
-              <p>mock TOEFL exams, assess readiness, provide feedback, and aid improvement.
+              <p>Mock TOEFL exams, assess readiness, provide feedback, and aid improvement.
 
               </p>
             </div>
@@ -197,7 +197,7 @@
 
           <div class="col-md-4">
             <div class="test-card">
-              <p>provide TOEFL insights, tips, and strategies, improving performance and confidence.
+              <p>Provide TOEFL insights, tips, and strategies, improving performance and confidence.
 
               </p>
             </div>
@@ -459,7 +459,7 @@
       <div class="containerform">
         <div class="right-columns">
           <h2>Book Free Consultation</h2>
-          <p>Build stronger Customer Relationship with <strong>Consultalk</strong></p>
+          <p>Build stronger Customer Relationship with <strong>NeemTree</strong></p>
         </div>
         <div class="left-columns"> <button type="submit" class="btn btn-primary btn-block" onclick="openPopup()">Book
             now</button></div>
