--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           Our Services
         </h2>
         <div class="timeline">
-          <ol>
+          <ol class="animated-element" onclick="stopAnimation()">
             <li>
               <div class="time-card">
                 <p class="time-cardcontent1"><span>#1</span> Test Preparation</p>
