fix: numbers style fix

--- a/USA.html
+++ b/USA.html
@@ -205,7 +205,7 @@
             <div class="containerform">
               <div class="right-columns">
                 <h2>Book Free Consultation</h2>
-                <p>Build stronger Customer Relationship with <strong>Consultalk</strong></p>
+                <p>Build stronger Customer Relationship with <strong>NeemTree</strong></p>
               </div>
               <div class="left-columns">  <button type="submit" class="btn btn-primary btn-block" onclick="openPopup()">Book now</button></div>
               
